force-app/main/default/objects/Settlement_Plan__c/Settlement_Plan__c.object-meta.xml
<CustomObject>
    <label>Settlement Plan</label>
    <nameField>
        <displayFormat>Arrival-{0000}</displayFormat>
        <label>Settlmenet Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>