force-app/main/default/objects/Settlement_Plan__c/fields/Adult_English_Class__c.field-meta.xml
<CustomField>
    <fullName>Adult_English_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult English Class</label>
    <type>Checkbox</type>
</CustomField>