force-app/main/default/objects/Settlement_Plan__c/fields/Bank_Statement_Q1__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_Q1__c</fullName>
    <label>Bank Statement - Q1</label>
    <type>Date</type>
</CustomField>