force-app/main/default/objects/Settlement_Plan__c/fields/BC_Services_Card__c.field-meta.xml
<CustomField>
    <fullName>BC_Services_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC Services Card</label>
    <type>Checkbox</type>
</CustomField>