force-app/main/default/objects/Settlement_Plan__c/fields/Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes__c</fullName>
    <label>Case Notes (test)</label>
    <type>TextArea</type>
</CustomField>