force-app/main/default/objects/Settlement_Plan__c/fields/Child_Care_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Care Benefits</label>
    <type>Checkbox</type>
</CustomField>