force-app/main/default/objects/Settlement_Plan__c/fields/Confirmation_of_PR__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_PR__c</fullName>
    <label>Confirmation of PR</label>
    <type>Date</type>
</CustomField>