force-app/main/default/objects/Settlement_Plan__c/fields/Date_Time_Arriving__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Arriving__c</fullName>
    <label>Date/Time Arriving</label>
    <type>DateTime</type>
</CustomField>