force-app/main/default/objects/Settlement_Plan__c/fields/Designated_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Designated_Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designated Pickup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Arrival_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>