force-app/main/default/objects/Settlement_Plan__c/fields/Initial_Housing_Host__c.field-meta.xml
<CustomField>
    <fullName>Initial_Housing_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Housing/Host</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Arrival_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>