force-app/main/default/objects/Settlement_Plan__c/fields/Interim_Federal_Health_IFH__c.field-meta.xml
<CustomField>
    <fullName>Interim_Federal_Health_IFH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interim Federal Health (IFH)</label>
    <type>Checkbox</type>
</CustomField>