force-app/main/default/objects/Settlement_Plan__c/fields/Lease_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Lease_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Agreement</label>
    <type>Checkbox</type>
</CustomField>