force-app/main/default/objects/Settlement_Plan__c/fields/Medical_Services_Plan_MSP__c.field-meta.xml
<CustomField>
    <fullName>Medical_Services_Plan_MSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Services Plan (MSP)</label>
    <type>Checkbox</type>
</CustomField>