force-app/main/default/objects/Settlement_Plan__c/fields/New_Arrival_Orientation__c.field-meta.xml
<CustomField>
    <fullName>New_Arrival_Orientation__c</fullName>
    <label>New Arrival Orientation</label>
    <type>Date</type>
</CustomField>