force-app/main/default/objects/Settlement_Plan__c/fields/Number_of_Individuals_Arriving__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Individuals_Arriving__c</fullName>
    <label>Number of Individuals Arriving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>