force-app/main/default/objects/Settlement_Plan__c/fields/Orientation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Date_Time__c</fullName>
    <label>Orientation Date/Time</label>
    <type>DateTime</type>
</CustomField>