force-app/main/default/objects/Settlement_Plan__c/fields/Pickup_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Mobile_Phone__c</fullName>
    <description>Mobile phone of person picking up refugee family at airport.</description>
    <formula>Designated_Pickup__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mobile phone of person picking up refugee family at airport (auto-filled).</inlineHelpText>
    <label>Pickup Mobile Phone</label>
    <type>Text</type>
</CustomField>