force-app/main/default/objects/Settlement_Plan__c/fields/PR_Card__c.field-meta.xml
<CustomField>
    <fullName>PR_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PR Card</label>
    <type>Checkbox</type>
</CustomField>