force-app/main/default/objects/Settlement_Plan__c/fields/School_Registration__c.field-meta.xml
<CustomField>
    <fullName>School_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Registration</label>
    <type>Checkbox</type>
</CustomField>