force-app/main/default/objects/Settlement_Plan__c/fields/Social_Insurance_Number_SIN__c.field-meta.xml
<CustomField>
    <fullName>Social_Insurance_Number_SIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Insurance Number (SIN)</label>
    <type>Checkbox</type>
</CustomField>